# credit-task-python

./: README.md  pyproject.toml
adminpage/: admin.py  models.py  urls.py  views.py
adminpage/migrations/: 0001_initial.py  0002_delete_approval.py
categories/: models.py  serializers.py
categories/migrations/: 0001_initial.py
config/: authentication.py  settings.py  urls.py
projects/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_project_category.py  0003_project_is_approved.py  0004_alter_project_is_approved.py  0005_project_photo_url_alter_project_photo.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_gender_user_name_alter_user_date_joined_and_more.py
